# chess-engine

./: .gitignore  CMakeLists.txt  README.md  ffi_wrapper.cpp  main.cpp
lib_chess_engine/: all_enums_header.hpp  bitboard_helper.cpp  bitboard_helper_header.hpp  chess_board.cpp  chess_board_header.hpp  engine.cpp  engine_debug_helper.cpp  engine_debug_helper_header.hpp  engine_header.hpp  general_configs_header.hpp  magic_bitboard_generator.cpp
lib_chess_engine/chess_board/: chess_board.cpp  chess_board_header.hpp
lib_chess_engine/evaluation/: evaluation.cpp  evaluation_header.hpp
lib_chess_engine/generals/: all_enums.cpp  all_enums_header.hpp  general_configs_header.hpp  helpful_test_code_block.txt
lib_chess_engine/helpers/: bitboard_helper_header.hpp  engine_debug_helper.cpp  engine_debug_helper_header.hpp  magic_bitboard_generator_header.hpp
lib_chess_engine/move_generator/: move_generator.cpp  move_generator_header.hpp
lib_chess_engine/search/: search.cpp  search_header.hpp
lib_chess_engine/transposition_table/: transposition_table.cpp  transposition_table_header.h  zobrist_hash_generator.cpp  zobrist_hash_generator_header.h
